# tribot

./: .gitignore  CMakeLists.txt  README.md  export_sdf.sh  notes.tex
res/: acrobot.rsdf  acrobot.sdf  constants.rb  constants.yaml  ground.sdf  mip.rsdf  mip.sdf  segway.rsdf  segway.sdf  segway_cart_pole.rsdf  segway_cart_pole.sdf  torus.blend  tribot.rsdf  tribot.sdf  unibot.rsdf  unibot.sdf  unibot_acrobot.rsdf  unibot_acrobot.sdf  wheel.rsdf  wheel.sdf
src/: Inspector.cpp  Inspector.hpp  StateConverter.cpp  StateConverter.hpp  UnibotPlant.cpp  UnibotPlant.hpp  UnibotVisualizer.cpp  UnibotVisualizer.hpp  acrobot_main.cpp  acrobot_util.cpp  acrobot_util.hpp  cart_pole_main.cpp  cart_pole_util.cpp  cart_pole_util.hpp  drake_util.cpp  drake_util.hpp  main.cpp  meta.hpp  mip_main.cpp  mip_util.cpp  mip_util.hpp  segway_main.cpp  unibot_main.cpp  unibot_util.cpp  unibot_util.hpp  wheel_main.cpp
